{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 9,
  "lineage": "dd4d48ea-815d-ad4d-4ecd-cb46604404a6",
  "resources": [
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cluster_internal_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-07-22T00:33:02.681-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/biomolecular-sims/global/firewalls/gcp-gromacs-allow-internal",
            "log_config": [],
            "name": "gcp-gromacs-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/networks/gcp-gromacs-network",
            "priority": 1000,
            "project": "biomolecular-sims",
            "self_link": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/firewalls/gcp-gromacs-allow-internal",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.slurm_cluster_network.google_compute_network.cluster_network"
          ]
        }
      ]
    },
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "cluster_ssh_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-22T00:33:02.328-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/biomolecular-sims/global/firewalls/gcp-gromacs-allow-ssh",
            "log_config": [],
            "name": "gcp-gromacs-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/networks/gcp-gromacs-network",
            "priority": 1000,
            "project": "biomolecular-sims",
            "self_link": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/firewalls/gcp-gromacs-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.slurm_cluster_network.google_compute_network.cluster_network"
          ]
        }
      ]
    },
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cluster_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/biomolecular-sims/global/networks/gcp-gromacs-network",
            "mtu": 0,
            "name": "gcp-gromacs-network",
            "project": "biomolecular-sims",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/networks/gcp-gromacs-network"
          }
        }
      ]
    },
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cluster_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-22T00:33:02.450-07:00",
            "id": "projects/biomolecular-sims/regions/us-west1/routers/gcp-gromacs-router",
            "name": "gcp-gromacs-router",
            "network": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/networks/gcp-gromacs-network",
            "project": "biomolecular-sims",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/regions/us-west1/routers/gcp-gromacs-router"
          },
          "dependencies": [
            "module.slurm_cluster_network.google_compute_network.cluster_network"
          ]
        }
      ]
    },
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "cluster_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "biomolecular-sims/us-west1/gcp-gromacs-router/gcp-gromacs-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "gcp-gromacs-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "biomolecular-sims",
            "region": "us-west1",
            "router": "gcp-gromacs-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "gcp-gromacs-us-west1",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.slurm_cluster_network.google_compute_network.cluster_network",
            "module.slurm_cluster_network.google_compute_router.cluster_router",
            "module.slurm_cluster_network.google_compute_subnetwork.cluster_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.slurm_cluster_network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "cluster_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-07-22T00:33:02.755-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/biomolecular-sims/regions/us-west1/subnetworks/gcp-gromacs-us-west1",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "gcp-gromacs-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/global/networks/gcp-gromacs-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "biomolecular-sims",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/biomolecular-sims/regions/us-west1/subnetworks/gcp-gromacs-us-west1"
          },
          "dependencies": [
            "module.slurm_cluster_network.google_compute_network.cluster_network"
          ]
        }
      ]
    }
  ]
}